iam_security-group/iam_security-group.yaml
---
AWSTemplateFormatVersion: 2010-09-09
Description: >-
    Upload EC2 metadata to S3 bucket
Parameters:
    ImageId:
        Description: EC2 image ID
        Type: String
        Default: ami-0eaec5838478eb0ba
    InstanceType:
        Description: EC2 instance type
        Type: String
        Default: t2.micro
    KeyName:
        Description: SSH key name to access EC2
        Type: String
        Default: vprokopy
    # To be commented when using AMI with already configured EC2 instance
    UserData:
        Description: EC2 UserData startup Bash script
        Type: String
    BucketName:
        Description: EC2 metadata S3 Bucket name
        Type: String
        Default: ec2-metadata
Resources:
    # VPC
    Vpc:
        Type: AWS::EC2::VPC
        Properties:
            CidrBlock: 10.1.0.0/16
            EnableDnsSupport: true
            EnableDnsHostnames: true
            Tags:
                - Key: Name
                  Value: !Join ["", [!Ref "AWS::StackName", "-VPC"]]
    # Public Subnet
    PublicSubnet:
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref Vpc
            CidrBlock: 10.1.10.0/24
            AvailabilityZone: !Select [0, !GetAZs ]
            MapPublicIpOnLaunch: true
            Tags:
                - Key: Name
                  Value: !Sub ${AWS::StackName}-PublicSubnet
    # InternetGateway
    InternetGateway:
        Type: AWS::EC2::InternetGateway
    GatewayAttachment:
        Type: AWS::EC2::VPCGatewayAttachment
        Properties:
            VpcId: !Ref Vpc
            InternetGatewayId: !Ref InternetGateway
    # Public RouteTable
    PublicRouteTable:
        Type: AWS::EC2::RouteTable
        Properties:
            VpcId: !Ref Vpc
            Tags:
                - Key: Name
                  Value: PublicRouteTable
    PublicRoute1:
        Type: AWS::EC2::Route
        Properties:
            RouteTableId: !Ref PublicRouteTable
            DestinationCidrBlock: 0.0.0.0/0
            GatewayId: !Ref InternetGateway
    PublicSubnetRouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref PublicRouteTable
            SubnetId: !Ref PublicSubnet
    # Public SecurityGroup
    PublicSecurityGroup:
        Type: AWS::EC2::SecurityGroup
        Properties:
            GroupName: PublicSecurityGroup
            GroupDescription: Public Security Group
            VpcId: !Ref Vpc
    PublicOutboundRule1:
        Type: AWS::EC2::SecurityGroupEgress
        Properties:
            GroupId: !Ref PublicSecurityGroup
            IpProtocol: "-1"
            FromPort: 0
            ToPort: 65535
            CidrIp: 0.0.0.0/0
    PublicInboundRule1:
        Type: AWS::EC2::SecurityGroupIngress
        Properties:
            GroupId: !Ref PublicSecurityGroup
            IpProtocol: tcp
            FromPort: 22
            ToPort: 22
            CidrIp: 0.0.0.0/0
    # S3 Bucket for EC2 metadata
    Ec2MetadataS3Bucket:
        Type: AWS::S3::Bucket
        DeletionPolicy: Delete
        Properties:
            BucketName: !Sub ${AWS::StackName}-${BucketName}
    # IAM Role
    Ec2MetadataToS3IamPolicy:
        Type: AWS::IAM::ManagedPolicy
        Properties:
            ManagedPolicyName: Ec2MetadataToS3
            Description: Grants access to S3 to store EC2 instance metadata
            Path: /
            PolicyDocument:
                Version: 2012-10-17
                Statement:
                    - Effect: Allow
                      Action:
                          - s3:PutObject
                      Resource:
                          - !Sub arn:aws:s3:::${Ec2MetadataS3Bucket}/*
    Ec2MetadataToS3IamRole:
        Type: AWS::IAM::Role
        Properties:
            RoleName: Ec2MetadataToS3
            Path: /
            AssumeRolePolicyDocument:
                Version: 2012-10-17
                Statement:
                    - Effect: Allow
                      Action:
                          - sts:AssumeRole
                      Principal:
                          Service:
                              - ec2.amazonaws.com
            ManagedPolicyArns:
                - !Ref Ec2MetadataToS3IamPolicy
    Ec2MetadataToS3InstanceProfile:
        Type: AWS::IAM::InstanceProfile
        Properties:
            Path: /
            Roles:
                - !Ref Ec2MetadataToS3IamRole
    # Public EC2
    PublicEc2:
        Type: AWS::EC2::Instance
        Properties:
            ImageId: !Ref ImageId
            InstanceType: !Ref InstanceType
            KeyName: !Ref KeyName
            # To be commented when using AMI with already configured EC2 instance
            UserData: !Ref UserData
            IamInstanceProfile: !Ref Ec2MetadataToS3InstanceProfile
            SecurityGroupIds:
                - !GetAtt PublicSecurityGroup.GroupId
            SubnetId: !Ref PublicSubnet
            Tags:
                - Key: Name
                  Value: !Sub ${AWS::StackName}-Ec2MetadataToS3
Outputs:
    # VPC
    VpcId:
        Description: VPC ID
        Value: !Ref Vpc
    VpcCidrBlock:
        Description: VPC CIDR block
        Value: !GetAtt Vpc.CidrBlock
    # Public Subnet
    PublicSubnetId:
        Description: Public Subnet ID
        Value: !Ref PublicSubnet
    PublicSubnetAvailabilityZone:
        Description: Public Subnet AvailabilityZone
        Value: !GetAtt PublicSubnet.AvailabilityZone
    InternetGatewayId:
        Description: InternetGateway ID
        Value: !Ref InternetGateway
    # Public SecurityGroup
    PublicSecurityGroupId:
        Description: Public SecurityGroup ID
        Value: !Ref PublicSecurityGroup
    # Public EC2
    PublicEc2InstanceId:
        Description: Public EC2 instance ID
        Value: !Ref PublicEc2
    PublicEc2PublicDnsName:
        Description: Public EC2 public DNS name
        Value: !GetAtt PublicEc2.PublicDnsName
    PublicEc2PublicIp:
        Description: Public EC2 public IP
        Value: !GetAtt PublicEc2.PublicIp
    PublicEc2PrivateDnsName:
        Description: Public EC2 private DNS name
        Value: !GetAtt PublicEc2.PrivateDnsName
    PublicEc2PrivateIp:
        Description: Public EC2 private IP
        Value: !GetAtt PublicEc2.PrivateIp
    # EC2 metadata S3 Bucket
    Ec2MetadataS3BucketName:
        Description: EC2 metadata S3 Bucket name
        Value: !Ref Ec2MetadataS3Bucket
    # IAM Role
    Ec2MetadataToS3IamRoleName:
        Description: EC2 metadata to S3 IAM Role name
        Value: !Ref Ec2MetadataToS3IamRole
    Ec2MetadataToS3IamManagedPolicyArn:
        Description: EC2 metadata to S3 IAM ManagedPolicy ARN
        Value: !Ref Ec2MetadataToS3IamPolicy
